--- a/TODO
+++ b/TODO
@@ -75,3 +75,4 @@
 - test and fix wsvt25
 - activity/bell should be per-window not per-link? what if it is cur win in
   session not being watched?
+- empty strings in config causes crash (lt_kije)
