New window options: force-width and force-height. This will force a window to   an arbitrary width and height (0 for the default unlimited). This is neat for   emacs which doesn't have a sensible way to force hard wrapping at 80   columns. Also, don't try to be clever and use clr_eol when redrawing the   whole screen, it causes trouble since the redraw functions are used to draw   the blank areas too.

--- a/TODO
+++ b/TODO
@@ -75,4 +75,7 @@
 - test and fix wsvt25
 - activity/bell should be per-window not per-link? what if it is cur win in
   session not being watched?
-- empty strings in config causes crash (lt_kije)
+- man page:
+      set-window-option
+      explanation of -t format
+      config file
