--- a/TODO
+++ b/TODO
@@ -69,11 +69,9 @@
   should not emulate it doing so
 - activity/bell should be per-window not per-link? what if it is cur win in
   session not being watched?
-- document status-left/status-right/status-interval/set-titles
 - enhance paste buffers. multiple buffers, per-session buffers, lots of command love
 - command history for command-prompt. tab completion
 - tidy up window modes
 - support \033_string\033\\ for window title too
-- fix bell-action in show-window
+- fix bell-action in show-options
 - list-keys should be sorted
-- command prompt doesn't work properly if status line is turned off. fix it
