--- a/TODO
+++ b/TODO
@@ -79,4 +79,5 @@
 ---
 save-buffer -b number filename
 load-buffer -b number filename
-copy-buffer (from other session)
+copy-buffer -s src-session -t dst-session -a src-index -b dst-index
+	    (from other session)
