--- a/TODO
+++ b/TODO
@@ -70,7 +70,6 @@
   session not being watched?
 - tidy up window modes
 - support \033_string\033\\ for window title too
-- fix bell-action in show-options
 - list-keys should be sorted
 - document buffer stuff
 - copy-mode enhancements: next word etc etc
@@ -78,6 +77,7 @@
 - command history for command-prompt. better tab completion
 - options parsing could be much more generic, opening the way for abbreviation
   and tab completion of option names
+- split status-colour into fg/bg
 ---
 save-buffer -b number filename
 load-buffer -b number filename
