--- a/TODO
+++ b/TODO
@@ -47,17 +47,13 @@
 - flags to centre screen in window
 - get rid of DEFDATA etc
 
--- For 0.4 --------------------------------------------------------------------
-
-- document zombie windows
-- document buffer stuff
-
 -- For 0.5 --------------------------------------------------------------------
 
 - commands:	save-buffer -b number filename
 		load-buffer -b number filename
-  	      	copy-buffer -s src-session -t dst-session -a src-index -b dst-index
-		      		    (from other session)
+  	      	copy-buffer -s src-session -t dst-session
+			-a src-index -b dst-index
+		      	(copy from other session)
 - clear EOL etc CANNOT rely on term using the current colour/attr and probably
   should not emulate it doing so
 - activity/bell should be per-window not per-link? what if it is cur win in
