--- a/TODO
+++ b/TODO
@@ -69,3 +69,4 @@
   have a "edit-mode" option select which keymap
 - many more info displays for various things
 - document mode-keys
+- vi half page scroll
