--- a/TODO
+++ b/TODO
@@ -62,8 +62,6 @@
 - command history for command-prompt. better tab completion (use options too)
 - window options should be done similarly to standard options
 - next prev word etc in command prompt
-- split keys in command prompt/scroll mode/copy mode into vi and emacs and
-  have a "edit-mode" option select which keymap
-- many more info displays for various things
+- many more info() displays for various things
 - document mode-keys
 - vi half page scroll
