--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-- mouse handling and some other bits elinks needs
 - line mode/char-at-a-time mode a la telnet?
 - handle ioctl/termios stuff on window sockets
 - figure out once and for all what is going on with backspace and del
@@ -12,9 +11,6 @@
 - it would be nice to have multichar commands so you could have C-b K K for
   kill-window to limit accidental presses
 - status-fg/status-bg should be able to set attributes: bold, etc
-- save/restore (DECSC/DECRC) are ugly. maybe a struct screen_attr and memcpy
-- force-default option: assume terminal supports default colours even if AX
-  is missing (like, eg, xterm-color in an aterm). DITTO for 256 colours
 - refer to windows by name etc (duplicates? fnmatch?)
 - commands:
 	command to run something without a window at all?
@@ -29,24 +25,17 @@
   in $x time (need window creation/use times)
 - lift SHRT_MAX limits for history
 - audit copy/scroll and other modes for problems with very small windows
-- screen_draw_* moved out/renamed (accept TTY_*?)
 - split clients into three RB trees by fd: attached/unattached/dead?
   or tailqs? what would be fastest per-char?
 - window splitting?
 - c/p is still borken in some ways
-- different screen model? layers perhaps? hmm
 - better mode features: search, back word, forward word, etc
 - flags to centre screen in window
 - better terminal emulation (identify, insert mode, some other bits)
 
 -- For 0.5 --------------------------------------------------------------------
 
-TODO -- 2 fix window-*.c
-	3 resizing
-	4 audit for leftover/unused code
-	5 next phase of tidying
-----
-
+- audit for leftover/unused code
 21:09 < merdely> NicM: if I run 'tmux attach -t main' and there is no tmux session named main, start a new one.
 - commands:	save-buffer -b number filename
 		load-buffer -b number filename
