--- a/TODO
+++ b/TODO
@@ -32,6 +32,8 @@
 - better mode features: search, back word, forward word, etc
 - flags to centre screen in window
 - better terminal emulation (identify, insert mode, some other bits)
+- save stack for last window
+- paste stack should be an SLIST. also key bindings? others?
 
 -- For 0.5 --------------------------------------------------------------------
 
