Make window options work the same was as session options, add mode-fg/mode-bg options, force -g for global on set/show/setw/showw/

--- a/TODO
+++ b/TODO
@@ -52,3 +52,5 @@
 - vi half page scroll
 - why do home/end work in emacs outside tmux but not inside?
 - document status line options, title bits
+- document mode-fg/mode-bg/message-fg/message-bg
+- document window options changes
