--- a/TODO
+++ b/TODO
@@ -48,6 +48,7 @@
 - many more info() displays for various things
 - vi half page scroll
 - backspace should perhaps wrap backwards over newlines which were not moved down by a newline: screen and the OS X terminal does this but xterm and most others do not. this might be hard: a flag for each grid line (top bit of size maybe)? a single flag is insufficient as can't then tell when to /stop/ unwrapping
+- OPTIONS section in man page with description of new option handling
+- update set/setw in man page with -g and -u flags
 - document status line options, title bits
-- document mode-fg/mode-bg/message-fg/message-bg
 - document window options changes
