--- a/TODO
+++ b/TODO
@@ -46,10 +46,16 @@
 - next prev word etc in command prompt; also ^K
 - many more info() displays for various things
 - vi half page scroll
-- backspace should perhaps wrap backwards over newlines which were not moved down by a newline: screen and the OS X terminal does this but xterm and most others do not. this might be hard: a flag for each grid line (top bit of size maybe)? a single flag is insufficient as can't then tell when to /stop/ unwrapping
+- backspace should perhaps wrap backwards over newlines which were not moved
+  down by a newline: screen and the OS X terminal does this but xterm and most
+  others do not. this might be hard: a flag for each grid line (top bit of size
+  maybe)? a single flag is insufficient as can't then tell when to /stop/
+  unwrapping
 - OPTIONS section in man page with description of new option handling
 - update set/setw in man page with -g and -u flags
 - document status line options, title bits
 - document window options changes
 - more # commands in status-left,right eg #H for hostname. others?
 - input.c is too complicated. simplify?
+- try change from pass-though model to redraw model (use updated screen
+  data). maybe too slow though?
