--- a/TODO
+++ b/TODO
@@ -59,3 +59,5 @@
 - input.c is too complicated. simplify?
 - try change from pass-though model to redraw model (use updated screen
   data). maybe too slow though?
+- use a better termcap internally instead of screen, perhaps xterm
+- tty.c is a bit ugly
