vis functions for Linux.

--- a/TODO
+++ b/TODO
@@ -63,3 +63,5 @@
 - document server-info
 - document status line options, title bits
 - document window options changes
+- FAQ: why; vim 256 colours; vim ctrl-pgup/dn; bug reports
+
