--- a/FAQ
+++ b/FAQ
@@ -21,7 +21,7 @@ There are still a few features screen includes that tmux omits:
 - builtin serial and telnet support; this is bloat and is unlikely to be added
   to tmux;
 - a more customisable status line, albeit with an awful syntax;
-- wider platform support, for example IRIX and AIX;
+- wider platform support, for example IRIX and AIX, and for odd terminals;
 - split windows; this is planned and should appear eventually.
 
 * I found a bug! What do I do?
