--- a/TODO
+++ b/TODO
@@ -64,3 +64,5 @@
 - document window options changes
 - a window mode to show a clock
 - a key binding to display the status line when it is turned off
+- FAQ "Can I have some examples of cool things I can do with tmux?" -- linkw
+- clone session command
